Segunda alteração do commit

--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
         <h1>Bem-vindo à Minha Landing Page</h1>
         <p>Explore algumas fotos incríveis abaixo!</p>
     </header>
+	
+    <!-- Container para as galerias -->
+    <div class="container">
+	<h2>Primeira Opção!</h2>
+        <!-- Primeira galeria -->
+        <section id="galeria1">
+            <!-- As imagens serão carregadas aqui com JavaScript -->
+        </section>
 
-    <section id="galeria">
-        <!-- As imagens serão carregadas aqui com JavaScript -->
-    </section>
-
+	<h2>Segunda Opção!</h2>
+        <!-- Segunda galeria -->
+        <section id="galeria2">
+            <!-- As imagens serão carregadas aqui com JavaScript -->
+        </section>
+    </div>
+	
     <footer>
+	<span>Juva & Dene</span>
         <p>&copy; 2025 Minha Landing Page. Todos os direitos reservados.</p>
     </footer>
 
